--- a/style.css
+++ b/style.css
@@ -13,6 +13,47 @@ body {
     display: flex;
 }
 
+.btn{
+    font-family: 'Playfair Display', serif;
+    background-color: transparent;
+    border: none;
+    color: rgb(223, 223, 208);
+    padding: 10px 25px;
+    text-align: center;
+    font-size: 16px;
+    border: 1px solid rgb(223, 223, 208);
+    border-radius: 20px;
+    outline: none;
+    cursor: pointer;
+  }
+
+  .btn:hover {
+    transform:scale(1.1);
+    -ms-transform:scale(1.1); /* IE 9 */
+    -moz-transform:scale(1.1); /* Firefox */
+    -webkit-transform:scale(1.1); /* Safari and Chrome */
+    -o-transform:scale(1.1); /* Opera */
+}
+
+#btn1{
+    position:absolute;
+    top: 60%;
+    left: 3%;
+}
+
+#btn2{
+    position:absolute;
+    top: 60%;
+    left: 11%;
+}
+
+#btn3{
+    position:absolute;
+    top: 60%;
+    left: 18.3%;
+}
+
+
 
 .intro-text{
     display: flex;
