--- a/style.css
+++ b/style.css
@@ -1,16 +1,110 @@
-body {
-    height: 100vh;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 
-.intro{
+.s1 {
     background: rgb(0, 0, 0);
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    z-index: -2;
+}
+.s2 {
+    background: rgb(0, 0, 0);
+    z-index: -2;
+}
+.s3 {
+    background: rgb(0, 0, 0);
+    z-index: -2;
+}
+
+.s4 {
+    background: rgb(0, 0, 0);
+    z-index: -2;
+}
+
+
+
+h1, h2 {
+    font-family: 'Playfair Display', serif;
+    font-weight: 400;
+    margin: 0.4rem;
+}
+
+h1 {
+    font-size: 3rem;
+    color: rgb(223, 223, 208);
+}
+h2 {
+    font-size: 2rem;
+    color: rgb(185, 185, 173);
+}
+
+.intro-text{
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+    padding: 0 3rem;
+}
+
+.vanta{
+    position: absolute;
+    min-width: 100%;
+    min-height: 50vh;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: block;
+    z-index: -1;
+
+}
+
+.txt-type > .txt{
+    border-right: 0.2rem solid rgb(223, 223, 208);
+    color: rgb(177, 19, 19);
+}
+
+.sidebar{
+    border-left-style: solid;
+    border-left:10px rgb(245, 245, 245);
+    width: 3em;
+    height: 100vh;
+    background: rgb(0, 0, 0);
+    position: absolute;
+    right:0;
+    top:0;
+}
+
+
+.social-links img, .useful-links img{
+    width: 2em;
+    margin: 0.3em auto;
+    cursor: pointer-in;
+}
+
+.social-links{
+    width: 3em;
+    text-align: center;
+    position: absolute;
+    top: 10%;
+    transform: translateY(-50%)
+}
+
+.useful-links{
+    width: 3em;
+    text-align: center;
+    position: absolute;
+    bottom: 2em;
+}
+
+.sidebar img:hover {
+    transform:scale(1.3);
+    -ms-transform:scale(1.3); /* IE 9 */
+    -moz-transform:scale(1.3); /* Firefox */
+    -webkit-transform:scale(1.3); /* Safari and Chrome */
+    -o-transform:scale(1.3); /* Opera */
 }
 
 .btn{
@@ -44,7 +138,7 @@ body {
 #btn2{
     position:absolute;
     top: 60%;
-    left: 11%;
+    left: 10.25%;
 }
 
 #btn3{
@@ -53,114 +147,7 @@ body {
     left: 18.3%;
 }
 
-
-
-.intro-text{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 100%;
-    padding: 0 3rem;
-}
-
-h1, h2 {
-    font-family: 'Playfair Display', serif;
-    font-weight: 400;
-    margin: 0.4rem;
-}
-
-h1 {
-    font-size: 3rem;
-    color: rgb(223, 223, 208);
-}
-h2 {
-    font-size: 2rem;
-    color: rgb(185, 185, 173);
-}
-
-.txt-type > .txt{
-    border-right: 0.2rem solid rgb(223, 223, 208);
-    color: rgb(177, 19, 19);
-}
-
-@media(min-width: 1200px){
-    h1{
-        font-weight: 5rem;
-    }
-}
-
-@media(max-width: 800px){
-    .intro-text{
-        padding: 0 2rem;
-    }
-    h1{
-        font-weight: 2rem;
-    }
-}
-
-@media(max-width: 500px){
-    .intro-text{
-        padding: 0 1rem;
-    }
-    h1{
-        font-weight: 1.5rem;
-    }
-    h2{
-        font-weight: 0.5rem;
-    }
-}
-
-.vanta{
-    position: absolute;
-    min-width: 100%;
-    min-height: 50vh;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    display: block;
-    z-index: -1;
-
-}
-
-
-.sidebar{
-    border-left-style: solid;
-    border-left:10px rgb(245, 245, 245);
-    width: 3em;
-    height: 100vh;
-    background: rgb(0, 0, 0);
-    position: absolute;
-    right:0;
-    top:0;
-}
-
-
-.social-links img, .useful-links img{
-    width: 2em;
-    margin: 0.3em auto;
-    cursor: pointer-in;
-}
-
-.social-links{
-    width: 3em;
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%)
-}
-
-.useful-links{
-    width: 3em;
-    text-align: center;
-    position: absolute;
-    bottom: 2em;
-}
-
-.sidebar img:hover {
-    transform:scale(1.3);
-    -ms-transform:scale(1.3); /* IE 9 */
-    -moz-transform:scale(1.3); /* Firefox */
-    -webkit-transform:scale(1.3); /* Safari and Chrome */
-    -o-transform:scale(1.3); /* Opera */
+#fp-nav ul li a span, 
+.fp-slidesNav ul li a span {
+    background: rgb(255, 255, 255);
 }
