--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body{
+    display: flex;
+    min-height: 100vh;
+}
 
 .s1 {
     background: rgb(0, 0, 0);
@@ -40,6 +44,14 @@ h2 {
     color: rgb(185, 185, 173);
 }
 
+.text > h2{
+    font-size: 2rem;
+    color: rgb(255, 255, 0);
+}
+.text > p{
+    color: rgb(255, 255, 255);
+}
+
 .intro-text{
     display: flex;
     flex-direction: column;
@@ -61,7 +73,7 @@ h2 {
 
 }
 
-.txt-type > .txt{
+.txt-type  .txt{
     border-right: 0.2rem solid rgb(223, 223, 208);
     color: rgb(177, 19, 19);
 }
@@ -128,26 +140,48 @@ h2 {
     -webkit-transform:scale(1.1); /* Safari and Chrome */
     -o-transform:scale(1.1); /* Opera */
 }
-
-#btn1{
-    position:absolute;
-    top: 60%;
+.row{
+    position: relative;
+    top: -35%;
     left: 3%;
 }
 
-#btn2{
-    position:absolute;
-    top: 60%;
-    left: 10.25%;
+
+@media only screen and (max-width: 550px) {
+    .row { 
+        top: -26%;  
+    }
 }
 
-#btn3{
-    position:absolute;
-    top: 60%;
-    left: 18.3%;
-}
 
 #fp-nav ul li a span, 
 .fp-slidesNav ul li a span {
     background: rgb(255, 255, 255);
+}
+
+.project_row{
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 100%;
+    max-height: 100%;
+    justify-content: center;
+}
+
+#column1, #column2, #column3, #column4{
+    width: 20%;
+}
+
+#column1 img:hover, #column2 img:hover, #column3 img:hover, #column4 img:hover{
+    scale: 1.05;
+    transition: 0.8s;
+}
+
+.project_row img{
+    width: 98%;
+    padding: 1%;
+    filter: grayscale(100%);
+}
+
+.project_row img:hover{
+    filter: grayscale(0%);
 }
