--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ h2 {
 .vanta{
     position: absolute;
     min-width: 100%;
-    min-height: 50vh;
+    min-height: 100vh;
     top: 0;
     right: 0;
     bottom: 0;
@@ -150,6 +150,11 @@ h2 {
 @media only screen and (max-width: 550px) {
     .row { 
         top: -26%;  
+    }
+}
+@media only screen and (min-width: 551px) {
+    .row { 
+        top: -35%;  
     }
 }
 
