--- a/style.css
+++ b/style.css
@@ -143,6 +143,7 @@ h2 {
     -moz-transform:scale(1.3); /* Firefox */
     -webkit-transform:scale(1.3); /* Safari and Chrome */
     -o-transform:scale(1.3); /* Opera */
+    transition: 0.5s;
 }
 
 .btn{
@@ -158,30 +159,34 @@ h2 {
     outline: none;
     cursor: pointer;
     text-decoration: none;
+    margin-left: 15px;
   }
 
-  .btn:hover {
+.row .btn:hover {
     transform:scale(1.1);
     -ms-transform:scale(1.1); /* IE 9 */
     -moz-transform:scale(1.1); /* Firefox */
     -webkit-transform:scale(1.1); /* Safari and Chrome */
     -o-transform:scale(1.1); /* Opera */
+    transition: 0.5s;
 }
+
 .row{
+    display: flex;
     position: relative;
     top: -35%;
-    left: 4%;
+    left: 3.5%;
 }
 
 
-@media only screen and (max-width: 550px) {
+@media only screen and (max-width: 580px) {
     .row { 
         top: -26%;  
     }
 }
-@media only screen and (min-width: 551px) {
+@media only screen and (min-width: 590px) {
     .row { 
-        top: -35%;  
+        top: -40%;  
     }
 }
 
